--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+
+    //noinspection GradleDynamicVersion
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
 
 
-    implementation 'com.google.android.libraries.places:places-compat:2.0.0'
+    implementation 'com.google.android.libraries.places:places:2.0.0'
 }
