add geofence to any position in map when user click, and give notification when current location arrive the geofence

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -17,8 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        
-        <receiver android:name=".GeofenceBroadcastReceiver"/>
+
+        <service android:name=".Classes.GeofenceTrasitionService" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
