--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,9 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4+'
 
 
+    //
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-media-compat:28.0.0'
+
     implementation 'com.google.android.libraries.places:places:2.0.0'
 }
