--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blue.palestineplaces">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -17,7 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <service android:name=".Classes.GeofenceTrasitionService" />
+        <!-- todo: here must check the exported adn label -->
+        <service
+            android:name=".Classes.GeofenceTrasitionService"
+            android:exported="true"
+            android:label="@string/app_name" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
