--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -34,9 +35,17 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4+'
 
 
+    // GeoFire
+    implementation 'com.firebase:geofire-java:3.0.0'
+
+    // Dexter
+    implementation 'com.karumi:dexter:6.0.0'
+
+    // Firebase database
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+
     //
     //noinspection GradleCompatible
     implementation 'com.android.support:support-media-compat:28.0.0'
 
-    implementation 'com.google.android.libraries.places:places:2.0.0'
 }
